Home renamed to Index

--- a/wormholes/barbie.html
+++ b/wormholes/barbie.html
@@ -20,7 +20,7 @@
       The more you stare, the weirder it starts to look. The sides start to flex, the glass concaves, it shrinks. You look around, your feet firmly on the ground. The tiny Reichstag building sits on the carpet below you. You pick it up and return it to the toys box, but as it clunks into the plastic container something bumps you in with it. You fall, and shrink to become a plastic Barbie. This is your life now. 
      </div> 
      <div class="options">
-      <a href="home.html"> 
+      <a href="index.html"> 
         <div class="content">
           Look on the bright side! 
         </div>
