--- a/wormholes/bouncy-sand.html
+++ b/wormholes/bouncy-sand.html
@@ -21,7 +21,7 @@
      </div>   
 
      <div class="options">
-      <a href="home.html"> 
+      <a href="index.html"> 
         <div class="content">
           Well 💩
         </div>
