--- a/wormholes/tree-branches.html
+++ b/wormholes/tree-branches.html
@@ -25,7 +25,7 @@
      </div> 
       
     <div class="options">
-      <a href="home.html"> 
+      <a href="https://en.wikipedia.org/wiki/Wikipedia:Go_ahead,_vandalize">
         <div class="content">
           Behold
         </div>
