--- a/wormholes/void.html
+++ b/wormholes/void.html
@@ -24,7 +24,7 @@
     </div> 
   
   <div class="options">
-    <a href="home.html"> 
+    <a href="index.html"> 
       <div class="content">
         That's just bad luck, isn't it?
       </div>
