--- a/wormholes/look-down.html
+++ b/wormholes/look-down.html
@@ -25,7 +25,7 @@
     </div> 
   
   <div class="options">
-    <a href="home.html"> 
+    <a href="index.html"> 
       <div class="content">
         ....
       </div>
