--- a/chrome-reader/index.html
+++ b/chrome-reader/index.html
@@ -32,31 +32,35 @@
   Colour
 </button>
 </div>
-<div class="patrik">
-<img src="assets/images/patrik.png" alt="patrick" > 
+<div class="intro">
+  <div class="patrik">
+    <img src="assets/images/patrik.png" alt="patrick" > 
+  </div>
+  <div class='bubble'>
+    <h3>
+      The notion of the “meme” was introduced by the evolutionary biologist Richard Dawkins
+    in the late 1970s as a way to describe what he called a “cultural gene.” Memes are units
+    of culture and behaviour which survive and spread via imitation and adaptation.
+    Examples of memes are dances, catchphrases, greetings, hairstyles. On the internet, they
+    can be pictures of cute cats, images of unicorns, they can be Rick Astley videos, or
+    perverse sexual images. Memes play a distinct role in protest; they seem to be the
+    resistance of today, just as “political posters” were yesterday—the embodiment of shared
+    ideas in a community. They can be JPEGs, or rumours. Indeed, part of their appeal is that
+    memes seem to spread spontaneously. Paul Mason, the BBC’s traveling chronicler of all
+    things crisis-related, found that “with the internet [...] and above all with the advent of
+    social media, it’s become possible to observe the development of memes at an
+    accelerated pace [...]. What happens is that the ideas arise, are immediately ‘market
+    tested’, and then are seen to either take off, bubble under, insinuate themselves into the
+    mainstream, or, if they are deemed no good, disappear.” Mason contends that “[for]
+    activists, memes create a kind of rough alternative to representative democracy.” But he
+    seems unsure as to their potential for permanence; are they anything more than “small
+    cultural portions of zeitgeist”?
+    </h3>
+  </div>
 </div>
-
-<h3>
-  The notion of the “meme” was introduced by the evolutionary biologist Richard Dawkins
-in the late 1970s as a way to describe what he called a “cultural gene.” Memes are units
-of culture and behaviour which survive and spread via imitation and adaptation.
-Examples of memes are dances, catchphrases, greetings, hairstyles. On the internet, they
-can be pictures of cute cats, images of unicorns, they can be Rick Astley videos, or
-perverse sexual images. Memes play a distinct role in protest; they seem to be the
-resistance of today, just as “political posters” were yesterday—the embodiment of shared
-ideas in a community. They can be JPEGs, or rumours. Indeed, part of their appeal is that
-memes seem to spread spontaneously. Paul Mason, the BBC’s traveling chronicler of all
-things crisis-related, found that “with the internet [...] and above all with the advent of
-social media, it’s become possible to observe the development of memes at an
-accelerated pace [...]. What happens is that the ideas arise, are immediately ‘market
-tested’, and then are seen to either take off, bubble under, insinuate themselves into the
-mainstream, or, if they are deemed no good, disappear.” Mason contends that “[for]
-activists, memes create a kind of rough alternative to representative democracy.” But he
-seems unsure as to their potential for permanence; are they anything more than “small
-cultural portions of zeitgeist”?
-</h3>
-<div class="first-text">
-<p>
+<div class="section-one">
+  <div class="first-text">
+    <p>
   There are three qualities which define the success of memes: longevity, fecundity,
 and copying-fidelity. Longevity indicates how long a meme can last. Fecundity applies to
 the appeal of a meme, whether it is catchy and thus likely to spread. Copying-fidelity is
@@ -152,8 +156,10 @@ domain of the everyday lifeworld: it is a shift to another domain of reality.”
 </div>
 <div class='sidebar'>
   <img src='assets/images/kermit.png'>
-  <img src='assets/images/ninenine.png'>
+  <img src='assets/images/pepe.png'>
 </div>
+</div>
+
 <h4>
 	“Greed, for lack of a better word, is good. Greed is right. Greed works. Greed clarifes, cuts through, and captures the essence of the evolutionary spirit.”
 </h4> 
