--- a/chrome-reader/index.html
+++ b/chrome-reader/index.html
@@ -157,6 +157,8 @@ domain of the everyday lifeworld: it is a shift to another domain of reality.”
 <div class='sidebar'>
   <img src='assets/images/kermit.png'>
   <img src='assets/images/pepe.png'>
+  <img src='assets/images/wyd.png'>
+  <img src="assets/images/peter.png">
 </div>
 </div>
 
@@ -188,6 +190,90 @@ with special “punctuation” marks. (Jacob [1970])
   </p>
 </div>
 
+<div class="simply-meme">
+  <div class="photo">
+    <img src='assets/images/think.png'>
+  </div>
+  <div class="content">
+    "You can't lose the objective if you don't play the objective."
+  </div>
+  </div>
+
+<div class="third-text">
+  <p>
+  When Dawkins wrote his book, in the early 1970s, this was the background
+  against which he worked: evolution was understood to be driven
+  by natural selection and the inheritance of essentially meaningful strings then became intertwined with Dawkins’ program in ways that are too complex to go into here. Dawkins’ original argument, in the first edition of The Selfish Gene, was
+  that the gene—and the DNA from which each gene is composed—is ultimately
+  not what’s important for evolution. Genes are rather a single example
+  of a larger set of evolutionary engines. Genes, argued Dawkins, are a
+  kind of “replicator.”</p>
+  <p>
+  A replicator is something, anything, that either (1) can make copies of
+  itself or (2) is easily and automatically copied by virtue of its relationship
+  to the medium in which it is found. Dawkins imagined this was the case
+  with the origins of life: a string of molecules came together by accident in
+  the early soup of the Earth’s tidal pools and, by virtue of their chemical
+  afªnity for other similar molecules, ultimately served as the basis for subsequent
+  duplication. Think of the replicator as a mould or template. Imagine it as a
+  large molecule consisting of a complex chain of various sorts of
+  building block molecules. The small building blocks were abundantly
+  available in the soup surrounding the replicator. Now suppose
+  that each building block has an afinity for its own kind. Then
+  whenever a building block from out in the soup lands up next to a
+  part of the replicator for which it has an afinity, it will tend to
+  stick there. The building blocks that attach themselves in this way
+  will automatically be arranged in a sequence that mimics that of
+  the replicator itself. It is easy then to think of them joining up to
+  form a stable chain just as in the formation of the original
+  replicator. (Dawkins [1976] 1989, p. 15)
+    </p>
+  <p>
+    As a result of the invention of this chemically-chaperoned form of patterncopying,
+  a new kind of stability was introduced into the world. And it was
+  this stability, Dawkins argued, that enabled the process we recognize today
+  as evolution by means of natural selection. But his intended contribution
+  was more specific: it was replicators that did this (as a class), not genes
+  (as individual units). From Dawkins’ perspective, evolution is impossible without stability.
+  This is because only stability allows for differential selection following
+  replication: if heritable traits are to vary (as a result of accidents in duplication)
+  and if the material causes underlying these traits are ultimately to
+  be represented in the larger population of replicators (due to competition for building blocks), then there must be a shared stable core with respect to which inter-generational change can occur. For life as we know it, this
+  role is played by the organic crystal we call DNA. But Dawkins argued
+  that this was just one kind of replicator; memes, he suggested, might provide
+  an example of another: a second example of apparent stability drawn
+  from life as we know it, which although hypothetical could be used to
+  clarify his point. And, initially, this is how his book was received in the
+  popular press.
+   </p>
+   <p>
+    The most famous passage, in terms of how the meme has since come to be
+    understood, is the one that followed this introduction of terminology:
+    Examples of memes are tunes, ideas, catch-phrases, clothes fashions,
+    ways of making pots or of building arches. Just as genes propagate
+    themselves in the gene pool by leaping from body to body via
+    sperms or eggs, so memes propagate themselves in the meme pool
+    by leaping from brain to brain via a process which, in the broad
+    sense, can be called imitation. (Dawkins in Hofstadter and Dennett
+    1981, p. 143)
+    Here, the metaphorical meme has been made active in its pursuit of replication.
+    Gone is the passive, chaperoned copying of the molecular soup.
+    Memes, in this presentation, are selfish predators. And our brains are their
+    prey.
+   </p>
+ </div>
+
+<h4>
+  "Memes should be regarded as living structures, not just metaphorically but
+  technically. When you plant a fertile meme in my mind, you literally
+  parasitize my brain, turning it into a vehicle for the meme’s
+  propagation in just the way that a virus may parasitize the genetic
+  mechanism of the host cell."
+</h4>
+
+<footer>
+  -Dawkins in Hofstadter and Dennett 1981, p. 143
+</footer>
 
     <!-- DO NOT REMOVE BELOW -->
     <!-- end here -->
