--- a/chrome-reader/index.html
+++ b/chrome-reader/index.html
@@ -21,6 +21,10 @@
   <body>
     <!-- DO NOT REMOVE ABOVE -->
     <!-- start here -->
+
+<div class="nav">
+  Memes and Other Things that Don't Matter
+</div>
 <h1>
   Memes <span class= "fun"> & </span> Other Things that <span class="thicc"> Don't </span> Matter
 </h1>
@@ -322,7 +326,7 @@ with special “punctuation” marks. (Jacob [1970])
     <h5> CLICK HERE FOR SOMETHING USELESS</h5>
   </div>
   </a>
-  
+
     <!-- DO NOT REMOVE BELOW -->
     <!-- end here -->
   </body>
