--- a/chrome-reader/index.html
+++ b/chrome-reader/index.html
@@ -25,17 +25,12 @@
 <div class="nav">
   Memes and Other Things that Don't Matter
 </div>
+
 <h1>
   Memes <span class= "fun"> & </span> Other Things that <span class="thicc"> Don't </span> Matter
 </h1>
-<div style="text-align: center;">
-<button>
-  Useless
-</button>
-<button>
-  Button
-</button>
-</div>
+
+
 <div class="intro">
   <div class="patrik">
     <img src="assets/images/patrik.png" alt="patrick" > 
@@ -166,9 +161,17 @@ domain of the everyday lifeworld: it is a shift to another domain of reality.”
 </div>
 </div>
 
-<h4>
+<h4 class= "greed">
 	“Greed, for lack of a better word, is good. Greed is right. Greed works. Greed clarifes, cuts through, and captures the essence of the evolutionary spirit.”
 </h4> 
+<div class="notification notification1">
+  <img src='assets/images/leo.png'>
+  <div class="message">
+    "Meme" is derived from the ancient Greek word "mimema", which means "something imitated"
+  </div>
+  
+</div>
+
 <footer>
 —Gordon Gekko, as portrayed by Michael
 Douglas in the 1987 Elm Wall Street
@@ -267,27 +270,23 @@ with special “punctuation” marks. (Jacob [1970])
    </p>
  </div>
 
-<h4>
+<h4 class= "dawkins">
   "Memes should be regarded as living structures, not just metaphorically but
   technically. When you plant a fertile meme in my mind, you literally
   parasitize my brain, turning it into a vehicle for the meme’s
   propagation in just the way that a virus may parasitize the genetic
   mechanism of the host cell."
 </h4>
+<div class="notification notification2">
+  hi again
+</div>
 
 <footer>
   -Dawkins in Hofstadter and Dennett 1981, p. 143
 </footer>
 
-
-
-<div class="madbro">
-  <div class="phototwo">
-    <img src='assets/images/peter.png'>
-  </div>
-  <div class="contenttwo">
-    "U Mad Bro?"
-  </div>
+<div class= "u-mad">
+  U Mad Bro?
 </div>
 
 <div class="fourth-text">
@@ -304,9 +303,13 @@ with special “punctuation” marks. (Jacob [1970])
 
 <div class="pepper">
   <img src="assets/images/pepperspraycop.jpg">
-  <h6>
+  <h6 class="public">
     A public voice can be found in this kind of humorous dialogue- and in many ways, it might carry a more immediate reaction than any of its institutional alternatives.
   </h6>
+  <div class="notification notification3">
+    hi again again!
+  </div>
+
   <footer>
     -The Temporary Autonomous Zone, Ontological Anarchy, Poetic Terrorism: Anarchy and Conspiracy, Hakim Bey, 1991, Autonomedia
   </footer>
