--- a/chrome-reader/index.html
+++ b/chrome-reader/index.html
@@ -154,10 +154,12 @@ domain of the everyday lifeworld: it is a shift to another domain of reality.”
 </p>
 </div>
 <div class='sidebar'>
-  <img src='assets/images/kermit.png'>
-  <img src='assets/images/pepe.png'>
-  <img src='assets/images/wyd.png'>
-  <img src="assets/images/sponge.png">
+  <img src='assets/images/brodie.png'>
+  <img src='assets/images/chloe.png'>
+  <img src='assets/images/hahrage.png'>
+  <img src="assets/images/wyd.png">
+  <img src="assets/images/puppet.png">
+  <img src="assets/images/shrek.png">
 </div>
 </div>
 
@@ -278,7 +280,10 @@ with special “punctuation” marks. (Jacob [1970])
   mechanism of the host cell."
 </h4>
 <div class="notification notification2">
-  hi again
+  <img src='assets/images/simpson.png'>
+  <div class="message">
+    The first 'viral hit' was the song The Hampsterdance Song by Hampton the Hamster. 
+  </div>
 </div>
 
 <footer>
@@ -303,11 +308,17 @@ with special “punctuation” marks. (Jacob [1970])
 
 <div class="pepper">
   <img src="assets/images/pepperspraycop.jpg">
+
   <h6 class="public">
     A public voice can be found in this kind of humorous dialogue- and in many ways, it might carry a more immediate reaction than any of its institutional alternatives.
   </h6>
+
   <div class="notification notification3">
-    hi again again!
+    <img src='assets/images/cat.png'>
+    <div class="message">
+      The first meme was a winky face, created in Usenet by Scott E. Fahlman. 
+    </div>
+
   </div>
 
   <footer>
@@ -326,7 +337,9 @@ with special “punctuation” marks. (Jacob [1970])
 
 <a>
   <div class="useless">
-    <h5> CLICK HERE FOR SOMETHING USELESS</h5>
+    <h5> 
+      <a href="https://trypap.com/"> CLICK HERE FOR SOMETHING USELESS </a>
+    </h5>
   </div>
   </a>
 
