--- a/chrome-reader/index.html
+++ b/chrome-reader/index.html
@@ -59,6 +59,12 @@
 </div>
 <div class="section-one">
   <div class="first-text">
+    <div class="title">
+      'The Meme'
+    </div>
+    <div class="subheading">
+      Daniel Van der Velden - Can Jokes Bring Down Governments?
+    </div>
     <p>
   There are three qualities which define the success of memes: longevity, fecundity,
 and copying-fidelity. Longevity indicates how long a meme can last. Fecundity applies to
@@ -179,7 +185,15 @@ domain of the everyday lifeworld: it is a shift to another domain of reality.”
 Douglas in the 1987 Elm Wall Street
 </footer>
 
+<div class="title">
+  The Misunderstanding of Memes
+</div>
+<div class="subheading">
+  Jeremy Trevelyan Burman - Biography of an Unscientific Object 
+</div>
+
 <div class="second-text">
+   
   <p>
     How could it be that Dawkins’ most famous book became controversial, but not as a result of what it said? How could its ideas have become the basis of textbooks, yet its arguments be labeled increasingly as revolutionary? The answers to these questions are tied to the reception of its claims: in particular, that genes are selfish—purposefully greedy in the pursuit of their own survival.
   </p>
@@ -293,9 +307,16 @@ with special “punctuation” marks. (Jacob [1970])
 <div class= "u-mad">
   U Mad Bro?
 </div>
+<div class="subheading">
+  Wyatt Niehaus - Direct Action in the Meme Pool
+</div>
+
+<div class="pepper">
+  <img src="assets/images/pepperspraycop.jpg">
+</div>
 
 <div class="fourth-text">
-<p>
+ <p>
   A memetic structure is any cultural institution, space, or community in which cultural products and communication survive based on Darwinian principles, similar to that of genetics. Memes adapt, evolve, and replicate based on their strength relative to the environment they exist within. A memetic structure can be a physical space like a shopping mall or a school campus but more recently, popular culture has defined memetic structures predominantly as virtual spaces- none more infamously than the website 4chan, and in particular, its popular /b/ image board. But as the internet becomes an increasingly political entity, in the advent of the Pirate Party, Wikileaks, and Anonymous, what happens to the content of these memetic structures? What role might memetics play in this radicalization of online space? The internet has always been a place for political action in small subsets and factions, but lately the “popular internet” is being retooled for political and ideological discourse by using highly accessible contemporary systems of online communication (Twitter, Facebook, Youtube). If we look at the most famous meme pool on the internet, 4chan- we now find a growing militarization and politicization of this structure; the internet-meme as a political weapon.
 </p>
 <p>
@@ -306,8 +327,6 @@ with special “punctuation” marks. (Jacob [1970])
 </p>
 </div>
 
-<div class="pepper">
-  <img src="assets/images/pepperspraycop.jpg">
 
   <h6 class="public">
     A public voice can be found in this kind of humorous dialogue- and in many ways, it might carry a more immediate reaction than any of its institutional alternatives.
@@ -324,7 +343,7 @@ with special “punctuation” marks. (Jacob [1970])
   <footer>
     -The Temporary Autonomous Zone, Ontological Anarchy, Poetic Terrorism: Anarchy and Conspiracy, Hakim Bey, 1991, Autonomedia
   </footer>
-</div>
+
 
 <div class="fifth-text">
   <p>
@@ -335,6 +354,15 @@ with special “punctuation” marks. (Jacob [1970])
   </p>
 </div>
 
+<div class="congrats">
+  <div class="photothree">
+    <img src='assets/images/hamster.png'>
+  </div>
+  <div class="contentthree">
+    Thumbs up from the happy hamster! 
+  </div>
+  </div>
+
 <a>
   <div class="useless">
     <h5> 
@@ -342,6 +370,11 @@ with special “punctuation” marks. (Jacob [1970])
     </h5>
   </div>
   </a>
+
+<div class="end-page">  
+  All articles in this site can be found at this link: 
+  <a href="https://www.are.na/uriah-gray/chrome-reader-site-references">are.na.com</a>
+</div>
 
     <!-- DO NOT REMOVE BELOW -->
     <!-- end here -->
